[tool.poetry]
name = "cachetools-async"
version = "0.0.2"
description = "Provides decorators that are inspired by and work closely with cachetools' for caching asyncio functions and methods."
authors = ["James Ward <james@notjam.es>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cachetools = "^5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
black = "^24.3.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
xfail_strict = true
addopts = "-p no:warnings"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
